--- a/SMS.Web/Views/GoOut/Approve.cshtml
+++ b/SMS.Web/Views/GoOut/Approve.cshtml
@@ -23,7 +23,7 @@
     <!--Div chứa table dữ liệu-->
     <div style="width:100%">
         <div class="card-header">
-            <h5 class="m-0 font-weight-bold text-primary">PHÊ DUYỆT CNV RA NGOÀI</h5>
+            <h5 class="m-0 font-weight-bold text-primary"><a href="/GoOut/Approve">PHÊ DUYỆT CNV RA NGOÀI</a></h5>
         </div>
         <div class="row dataTables_wrapper dt-bootstrap4 above-table">
             <div class="col-2 input-group input-group-sm">
@@ -60,39 +60,7 @@
                 <button class="btn btn-sm btn-primary" id="btn-search"><i class="fas fa-search"></i> Tìm kiếm</button>
             </div>
         </div>
-
-        <div style="margin-top: 8px">
-            <div class="button-container" style="float: left">
-                <a class="btn btn-sm btn-success btn-reload"><i class="fas fa-sync"></i> Tải lại</a>
-            </div>
-            <div style="float: right">
-                <form class="radio-container">
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox" checked>Tất cả
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Chưa phê duyệt
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Đã phê duyệt
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Phê duyệt thay
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Hủy bỏ
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Bảo vệ đã xác nhận
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Bảo vệ chưa xác nhận
-                    </label>
-                </form>
-            </div>
-        </div>
     </div>
-
 
     <div style="width:100%; overflow-x:auto">
         <!--Bảng dữ liệu Về sớm-->
@@ -141,7 +109,7 @@
             {
                 <tr>
                     <td>
-                        <span>RGO</span>@Html.DisplayFor(modelItem => item.ID)@Html.DisplayFor(modelItem => item.Team)
+                        @Html.DisplayFor(modelItem => item.Team)@Html.DisplayFor(modelItem => item.ID)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.EmpCode)
@@ -179,10 +147,10 @@
                         @Html.DisplayFor(modelItem => item.Reason)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.EstimatedDateOut)
+                        @Html.DisplayFor(modelItem => item.EstimatedDateOut) @Html.DisplayFor(modelItem => item.EstimatedTimeOut)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.EstimatedDateReturn)
+                        @Html.DisplayFor(modelItem => item.EstimatedDateReturn) @Html.DisplayFor(modelItem => item.EstimatedTimeReturn)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.CreatedBy)
