--- a/SMS.Web/Views/GoOut/SummaryGO.cshtml
+++ b/SMS.Web/Views/GoOut/SummaryGO.cshtml
@@ -140,11 +140,11 @@
                             <td>
                                 @if (item.GuardStatusOut == 1)
                                 {
-                                    <i class="fas fa-check-square" style="color:dodgerblue" title="Đã xác nhận"></i>
+                                    <span>Y</span>
                                 }
                                 else if (item.GuardStatusOut == 0)
                                 {
-                                    <i class="fas fa-window-close" style="color:red" title="Không xác nhận"></i>
+                                    <span>N</span>
                                 }
                             </td>
                             <td>
@@ -156,11 +156,11 @@
                             <td>
                                 @if (item.GuardStatusReturn == 1)
                                 {
-                                    <i class="fas fa-check-square" style="color:dodgerblue" title="Đã xác nhận"></i>
+                                    <span>Y</span>
                                 }
                                 else if (item.GuardStatusReturn == 0)
                                 {
-                                    <i class="fas fa-window-close" style="color:red" title="Không xác nhận"></i>
+                                    <span>N</span>
                                 }
                             </td>
                         </tr>
