--- a/SMS.Web/Views/Guest/Edit.cshtml
+++ b/SMS.Web/Views/Guest/Edit.cshtml
@@ -393,7 +393,7 @@
             guestObject.Team = $('#txtTeamBI').val();
             guestObject.Guest_Item = [];
 
-            $(".items-container").each((index, item) => {
+            $(".row-items").each((index, item) => {
                 var guest_Item = {};
                 guest_Item.ID = $(item).find('input[class*=itemId]').val();
                 guest_Item.CatID = $('#txtID').val();
