--- a/SMS.Web/Views/LeaveEarly/Create.cshtml
+++ b/SMS.Web/Views/LeaveEarly/Create.cshtml
@@ -90,12 +90,12 @@
                     <div class="form-group input-group specific-date-pick">
                         <label class="col-2 top-space" for="EstimatedDate">Ngày đăng ký <span class="red">(*)</span></label>
                         <div class="col-3 input-group-sm">
-                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @id = "estimated_date", @class = "form-control input-previous-button", @readonly = "readonly" } })
+                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @id = "estimated_date", @class = "form-control input-previous-button", @readonly = "readonly", @style = "background-color: white" } })
 
                         </div>
                         <label class="top-space" for="EstimatedTime">Giờ đăng ký <span class="red">(*)</span></label>
                         <div class="col-2 input-group-sm">
-                            @Html.EditorFor(model => model.EstimatedTime, new { htmlAttributes = new { @id = "estimated_time", @class = "form-control input-previous-button", @readonly = "readonly" } })
+                            @Html.EditorFor(model => model.EstimatedTime, new { htmlAttributes = new { @id = "estimated_time", @class = "form-control input-previous-button", @type = "time" } })
                         </div>
                         @Html.ValidationMessageFor(model => model.EstimatedDate, "", new { @class = "text-danger" })
                         @Html.ValidationMessageFor(model => model.EstimatedTime, "", new { @class = "text-danger" })
