--- a/SMS.Web/Views/BringIn/FSTApproveDetail.cshtml
+++ b/SMS.Web/Views/BringIn/FSTApproveDetail.cshtml
@@ -94,8 +94,6 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="4">Phê duyệt</th>
-                    <th colspan="4">ITT/SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
                 </tr>
             </thead>
@@ -130,93 +128,7 @@
                                 <i class="fas fa-check-square" title="Có đem trở ra"></i>
                             }
                         </td>
-                        <td>@item.ReturnDate</td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ApprovedBy))
-                            {
-                                @:@item.ApprovedBy
-                            }
-                        </td>
-                        <td>
-                            @if (item.ApprovedDate != null)
-                            {
-                                @:@item.ApprovedDate
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ApproverRemark))
-                            {
-                                @:@item.ApproverRemark
-                            }
-                        </td>
-                        <td>
-                            @if (item.ApprovedStatus != null)
-                            {
-                                if (item.ApprovedStatus == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ITT))
-                            {
-                                @:@item.ITT
-                            }
-                            else if (!string.IsNullOrEmpty(item.SMT))
-                            {
-                                @:@item.SMT
-                            }
-                        </td>
-                        <td>
-                            @if (item.ITT_Date != null)
-                            {
-                                @:@item.ITT_Date
-                            }
-                            else if (item.SMT_Date != null)
-                            {
-                                @:@item.SMT_Date
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ITT_Remark))
-                            {
-                                @:@item.ITT_Remark
-                            }
-                            else if (!string.IsNullOrEmpty(item.SMT_Remark))
-                            {
-                                @:@item.SMT_Remark
-                            }
-                        </td>
-                        <td>
-                            @if (item.ITT_Status != null)
-                            {
-                                if (item.ITT_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                            else if (item.SMT_Status != null)
-                            {
-                                if (item.SMT_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                        </td>
-
+                        <td>@item.ReturnDate @item.ReturnTime</td>
                         @if (string.IsNullOrEmpty(item.FST))
                         {
                             <td>@item.FST</td>
@@ -233,11 +145,11 @@
                             <td>@item.FST_Date</td>
                             if (item.FST_Status == 0)
                             {
-                                <td><i class="fas fa-times" style="color: red"></i></td>
+                                <td><i class="fas fa-times" style="color: red" title="Không phê duyệt"></i></td>
                             }
                             else if (item.FST_Status == 1)
                             {
-                                <td><i class="fas fa-check-square"></i></td>
+                                <td><i class="fas fa-check-square" title="Đã phê duyệt"></i></td>
                             }
                             <td>@item.FST_Remark</td>
                         }
