--- a/SMS.Web/Views/BringIn/ITTApproveDetail.cshtml
+++ b/SMS.Web/Views/BringIn/ITTApproveDetail.cshtml
@@ -95,9 +95,7 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="4">Phê duyệt</th>
                     <th colspan="4">ITT/SMT phê duyệt</th>
-                    <th colspan="4">FST phê duyệt</th>
                 </tr>
             </thead>
             <tbody>
@@ -131,39 +129,7 @@
                                 <i class="fas fa-check-square" title="Có đem trở ra"></i>
                             }
                         </td>
-                        <td>@item.ReturnDate</td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ApprovedBy))
-                            {
-                                @:@item.ApprovedBy
-                            }
-                        </td>
-                        <td>
-                            @if (item.ApprovedDate != null)
-                            {
-                                @:@item.ApprovedDate
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ApproverRemark))
-                            {
-                                @:@item.ApproverRemark
-                            }
-                        </td>
-                        <td>
-                            @if (item.ApprovedStatus != null)
-                            {
-                                if (item.ApprovedStatus == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times" style="color:red"></i>
-                                }
-                            }
-                        </td>
-
+                        <td>@item.ReturnDate @item.ReturnTime</td>
                         @if (string.IsNullOrEmpty(item.ITT) && string.IsNullOrEmpty(item.SMT))
                         {
                             <td>@item.ITT</td>
@@ -182,22 +148,22 @@
                             {
                                 if (item.ITT_Status == 0)
                                 {
-                                    <td><i class="fas fa-times" style="color:red"></i></td>
+                                    <td><i class="fas fa-times" style="color:red" title="Không phê duyệt"></i></td>
                                 }
                                 else
                                 {
-                                    <td><i class="fas fa-check-square"></i></td>
+                                    <td><i class="fas fa-check-square" title="Đã phê duyệt"></i></td>
                                 }
                             }
                             else if (item.SMT_Status != null)
                             {
                                 if (item.SMT_Status == 0)
                                 {
-                                    <td><i class="fas fa-times" style="color:red"></i></td>
+                                    <td><i class="fas fa-times" style="color:red" title="Không phê duyệt"></i></td>
                                 }
                                 else
                                 {
-                                    <td><i class="fas fa-check-square"></i></td>
+                                    <td><i class="fas fa-check-square" title="Đã phê duyệt"></i></td>
                                 }
                             }
                             if (!string.IsNullOrEmpty(item.ITT_Remark))
@@ -208,40 +174,7 @@
                             {
                                 <td>@item.SMT_Remark</td>
                             }
-
-                        }
-
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.FST))
-                            {
-                                @:@item.FST
-                            }
-                        </td>
-                        <td>
-                            @if (item.FST_Date != null)
-                            {
-                                @:@item.FST_Date
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.FST_Remark))
-                            {
-                                @:@item.FST_Remark
-                            }
-                        </td>
-                        <td>
-                            @if (item.FST_Status != null)
-                            {
-                                if (item.FST_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times" style="color:red"></i>
-                                }
-                            }
-                        </td>
+                        }                        
                     </tr>
                 }
             </tbody>
