--- a/SMS.Web/Views/BringOut/ApproveDetail.cshtml
+++ b/SMS.Web/Views/BringOut/ApproveDetail.cshtml
@@ -91,9 +91,7 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="2">Trưởng phòng phê duyệt</th>
-                    <th colspan="4">ITT/SMT phê duyệt</th>
-                    <th colspan="4">FST phê duyệt</th>
+                    <th colspan="4">Trưởng phòng phê duyệt</th>
                 </tr>
             </thead>
             <tbody>
@@ -134,115 +132,33 @@
                         <td>
                             @if (item.IsReturn.Value)
                             {
-                                <span>@item.ReturnDate | @item.ReturnTime</span>
+                                <span>@item.ReturnDate  @item.ReturnTime</span>
                             }
                         </td>
                         @if (string.IsNullOrEmpty(item.ApprovedBy))
                         {
+                            <td>@item.ApprovedBy</td>
+                            <td>@item.ApprovedDate</td>
                             <td>
                                 <a class="btn btn-primary btn-standard btn-admin-approve-LE approve" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
-                                <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
+                                <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px; color: white"></i></a>
                             </td>
-                            <td><input class="remark remark-1 col-12" type="text" placeholder="Ghi chú..."/></td>
+                            <td><input class="remark remark-1 col-12" type="text" placeholder="Ghi chú..." /></td>
                         }
                         else
                         {
+                            <td>@item.ApprovedBy</td>
+                            <td>@item.ApprovedDate</td>
                             if (item.ApprovedStatus == 0)
                             {
                                 <td><i class="fas fa-times" style="color: red" title="Không phê duyệt"></i></td>
                             }
                             else
                             {
-                                <td><i class="fas fa-check-square"></i></td>
+                                <td><i class="fas fa-check-square" title="Đã phê duyệt"></i></td>
                             }
                             <td>@item.ApproverRemark</td>
                         }
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ITT))
-                            {
-                                @:@item.ITT
-                            }
-                            else if (!string.IsNullOrEmpty(item.SMT))
-                            {
-                                @:@item.SMT
-                            }
-                        </td>
-                        <td>
-                            @if (item.ITT_Date != null)
-                            {
-                                @:@item.ITT_Date
-                            }
-                            else if (item.SMT_Date != null)
-                            {
-                                @:@item.SMT_Date
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ITT_Remark))
-                            {
-                                @:@item.ITT_Remark
-                            }
-                            else if (!string.IsNullOrEmpty(item.SMT_Remark))
-                            {
-                                @:@item.SMT_Remark
-                            }
-                        </td>
-                        <td>
-                            @if (item.ITT_Status != null)
-                            {
-                                if (item.ITT_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                            else if (item.SMT_Status != null)
-                            {
-                                if (item.SMT_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                        </td>
-
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.FST))
-                            {
-                                @:@item.FST
-                            }
-                        </td>
-                        <td>
-                            @if (item.FST_Date != null)
-                            {
-                                @:@item.FST_Date
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.FST_Remark))
-                            {
-                                @:@item.FST_Remark
-                            }
-                        </td>
-                        <td>
-                            @if (item.FST_Status != null)
-                            {
-                                if (item.FST_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                        </td>
                     </tr>
                 }
             </tbody>
