--- a/SMS.Web/Views/BringOut/ITTApproveDetail.cshtml
+++ b/SMS.Web/Views/BringOut/ITTApproveDetail.cshtml
@@ -95,157 +95,91 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="2">Người đăng ký</th>
-                    <th colspan="4">Phê duyệt</th>
-                    <th colspan="2">ITT/SMT phê duyệt</th>
-                    <th colspan="4">FST phê duyệt</th>
+                    <th colspan="4">ITT/SMT phê duyệt</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model.Bring_Out_Items)
                 {
-                    <tr>
-                        <td>
-                            <input type="hidden" class="itemId" value="@item.ID" />
-                            @item.Item
-                        </td>
-                        <td>@item.Serial</td>
-                        <td>@item.Quantity</td>
-                        <td>@item.Unit</td>
-                        <td>
-                            @if (item.AssetType == 0)
-                            {
-                                @:Hàng thường
-                            }
-                            else if (item.AssetType == 1)
-                            {
-                                @:Hàng IT
-                            }
-                            else
-                            {
-                                @:Hàng độc hại
-                            }
-                        </td>
-                        <td title="Có đem trở ra">
-                            @if (item.IsReturn.Value)
-                            {
-                                <i class="fas fa-check-square"></i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-square-o"></i>
-                            }
-                        </td>
-                        <td>@item.ReturnDate</td>
-                        <td>@item.ApprovedBy</td>
-                        <td>@item.ApprovedDate</td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ApprovedBy))
-                            {
-                                @:@item.ApprovedBy
-                            }
-                        </td>
-                        <td>
-                            @if (item.ApprovedDate != null)
-                            {
-                                @:@item.ApprovedDate
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ApproverRemark))
-                            {
-                                @:@item.ApproverRemark
-                            }
-                        </td>
-                        <td>
-                            @if (item.ApprovedStatus != null)
-                            {
-                                if (item.ApprovedStatus == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                        </td>
-
-                        @if (string.IsNullOrEmpty(item.ITT) && string.IsNullOrEmpty(item.SMT))
+                <tr>
+                    <td>
+                        <input type="hidden" class="itemId" value="@item.ID" />
+                        @item.Item
+                    </td>
+                    <td>@item.Serial</td>
+                    <td>@item.Quantity</td>
+                    <td>@item.Unit</td>
+                    <td>
+                        @if (item.AssetType == 0)
                         {
-                            <td>
-                                <a class="btn btn-primary btn-standard btn-admin-approve-LE approve" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
-                                <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
-                            </td>
-                            <td><input class="remark remark-1 col-12" type="text" placeholder="Ghi chú..." /></td>
+                            @:Hàng thường
+                        }
+                        else if (item.AssetType == 1)
+                        {
+                            @:Hàng IT
                         }
                         else
                         {
-                            if (item.ITT_Status != null)
+                            @:Hàng độc hại
+                        }
+                    </td>
+                    <td title="Có đem trở ra">
+                        @if (item.IsReturn.Value)
+                        {
+                            <i class="fas fa-check-square"></i>
+                        }
+                        else
+                        {
+                            <i class="fa fa-square-o"></i>
+                        }
+                    </td>
+                    <td>@item.ReturnDate @item.ReturnTime</td>
+                    @if (string.IsNullOrEmpty(item.ITT) && string.IsNullOrEmpty(item.SMT))
+                    {
+                        <td>@item.ITT</td>
+                        <td>@item.ITT_Date</td>
+                        <td>
+                            <a class="btn btn-primary btn-standard btn-admin-approve-LE approve" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
+                            <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
+                        </td>
+                        <td><input class="remark remark-1 col-12" type="text" placeholder="Ghi chú..." /></td>
+                    }
+                    else
+                    {
+                        <td>@item.ITT</td>
+                        <td>@item.ITT_Date</td>
+                        if (item.ITT_Status != null)
+                        {
+                            if (item.ITT_Status == 0)
                             {
-                                if (item.ITT_Status == 0)
-                                {
-                                    <td><i class="fas fa-times"></i></td>
-                                }
-                                else
-                                {
-                                    <td><i class="fas fa-check-square"></i></td>
-                                }
-                            }
-                            else if (item.SMT_Status != null)
-                            {
-                                if (item.SMT_Status == 0)
-                                {
-                                    <td><i class="fas fa-times"></i></td>
-                                }
-                                else
-                                {
-                                    <td><i class="fas fa-check-square"></i></td>
-                                }
-                            }
-                            if (!string.IsNullOrEmpty(item.ITT_Remark))
-                            {
-                                <td>@item.ITT_Remark</td>
+                                <td><i class="fas fa-times" style="color:red" title="Không phê duyệt"></i></td>
                             }
                             else
                             {
-                                <td>@item.SMT_Remark</td>
+                                <td><i class="fas fa-check-square" title="Đã phê duyệt"></i></td>
                             }
-
                         }
-
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.FST))
+                        else if (item.SMT_Status != null)
+                        {
+                            if (item.SMT_Status == 0)
                             {
-                                @:@item.FST
+                                <td><i class="fas fa-times" style="color:red" title="Không phê duyệt"></i></td>
                             }
-                        </td>
-                        <td>
-                            @if (item.FST_Date != null)
+                            else
                             {
-                                @:@item.FST_Date
+                                <td><i class="fas fa-check-square" title="Đã phê duyệt"></i></td>
                             }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.FST_Remark))
-                            {
-                                @:@item.FST_Remark
-                            }
-                        </td>
-                        <td>
-                            @if (item.FST_Status != null)
-                            {
-                                if (item.FST_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times"></i>
-                                }
-                            }
-                        </td>
-                    </tr>
+                        }
+                        if (!string.IsNullOrEmpty(item.ITT_Remark))
+                        {
+                            <td>@item.ITT_Remark</td>
+                        }
+                        else
+                        {
+                            <td>@item.SMT_Remark</td>
+                        }
+                    }
+                </tr>
                 }
             </tbody>
         </table>
