--- a/SMS.Web/Views/Guard/Queue.cshtml
+++ b/SMS.Web/Views/Guard/Queue.cshtml
@@ -94,14 +94,14 @@
                     @foreach (var item in ViewBag.LeaveEarlies)
                     {
                         <tr>
-                            <td><span>RLE</span><spna>@item.ID</spna><span>@item.Team</span></td>
+                            <td><span>RLE</span><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmLE/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
                             <td>@item.Reason</td>
                             <td>@item.EstimatedDate | @item.EstimatedTime</td>
                             <td>
-                                <a href="/LeaveEarly/LEReport/@item.ID" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/LeaveEarly/LEReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
                                 </a>
                             </td>
@@ -146,7 +146,7 @@
                     @foreach (var item in ViewBag.GoOuts)
                     {
                         <tr>
-                            <td>@item.ID</td>
+                            <td><span>RGO</span><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmGO/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
@@ -154,7 +154,7 @@
                             <td>@item.EstimatedDateOut | @item.EstimatedTimeOut</td>
                             <td>@item.EstimatedDateReturn | @item.EstimatedTimeReturn</td>
                             <td>
-                                <a href="/GoOut/GOReport/@item.ID" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/GoOut/GOReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
                                 </a>
                             </td>
@@ -203,7 +203,7 @@
                     @foreach (var item in ViewBag.BringIns)
                     {
                         <tr>
-                            <td>@item.ID</td>
+                            <td><span>RBI</span><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmBringIn/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
@@ -220,7 +220,7 @@
                                 }
                             </td>
                             <td>
-                                <a href="/BringIn/BIReport/@item.ID" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/BringIn/BIReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
                                 </a>
                             </td>
@@ -265,7 +265,7 @@
                     @foreach (var item in ViewBag.BringOuts)
                     {
                         <tr>
-                            <td>@item.ID</td>
+                            <td><span>RBO</span><span>@item.ID</span><span>@item.Team</span></td>
                             <td><a href="/Guard/ConfirmBringOut/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.Position</td>
                             <td>@item.Team</td>
@@ -282,7 +282,7 @@
                                 }
                             </td>
                             <td>
-                                <a href="/BringOut/BOReport/@item.ID" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/BringOut/BOReport/@item.ID" target="_blank" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
                                 </a>
                             </td>
