--- a/SMS.Web/Views/Guest/FSTApproveDetail.cshtml
+++ b/SMS.Web/Views/Guest/FSTApproveDetail.cshtml
@@ -202,133 +202,139 @@
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
                     <th colspan="4">ITT/SMT phê duyệt</th>
-                    <th colspan="2">FST phê duyệt</th>
+                    <th colspan="4">FST phê duyệt</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model.Guest_Item)
                 {
-                    <tr>
-                        <td>
-                            <input type="hidden" class="itemID" value="@item.ID" />
-                            @item.Item
-                        </td>
-                        <td>@item.Serial</td>
-                        <td>@item.Quantity</td>
-                        <td>@item.Unit</td>
-                        <td>
-                            @if (item.AssetType == 0)
-                            {
-                                @:Hàng thường
-                            }
-                            else if (item.AssetType == 1)
-                            {
-                                @:Hàng IT
-                            }
-                            else if (item.AssetType == 2)
-                            {
-                                @:Hàng độc hại
-                            }
-                        </td>
-                        @if (item.IsReturn == true)
+                <tr>
+                    <td>
+                        <input type="hidden" class="itemID" value="@item.ID" />
+                        @item.Item
+                    </td>
+                    <td>@item.Serial</td>
+                    <td>@item.Quantity</td>
+                    <td>@item.Unit</td>
+                    <td>
+                        @if (item.AssetType == 0)
                         {
-                            <td title="Có đem trở ra"><i class="fas fa-check-square" style="color: dodgerblue"></i></td>
+                            @:Hàng thường
                         }
-                        else if (item.IsReturn == false)
+                        else if (item.AssetType == 1)
                         {
-                            <td title="Không đem trở ra"><i class="fas fa-times" style="color: red"></i></td>
+                            @:Hàng IT
                         }
-                        else
+                        else if (item.AssetType == 2)
                         {
-                            <td></td>
+                            @:Hàng độc hại
                         }
-                        @if (item.IsReturn == true)
+                    </td>
+                    @if (item.IsReturn == true)
+                    {
+                        <td title="Có đem trở ra"><i class="fas fa-check-square" style="color: dodgerblue"></i></td>
+                    }
+                    else if (item.IsReturn == false)
+                    {
+                        <td title="Không đem trở ra"><i class="fas fa-times" style="color: red"></i></td>
+                    }
+                    else
+                    {
+                        <td></td>
+                    }
+                    @if (item.IsReturn == true)
+                    {
+                        <td>@item.ReturnDate | @item.ReturnTime</td>
+                    }
+                    else
+                    {
+                        <td></td>
+                    }
+                    <td>
+                        @if (!string.IsNullOrEmpty(item.ITT))
                         {
-                            <td>@item.ReturnDate | @item.ReturnTime</td>
+                            @:@item.ITT
                         }
-                        else
+                        else if (!string.IsNullOrEmpty(item.SMT))
                         {
-                            <td></td>
+                            @:@item.SMT
                         }
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ITT))
-                            {
-                                @:@item.ITT
-                            }
-                            else if (!string.IsNullOrEmpty(item.SMT))
-                            {
-                                @:@item.SMT
-                            }
-                        </td>
-                        <td>
-                            @if (item.ITT_Date != null)
-                            {
-                                @:@item.ITT_Date
-                            }
-                            else if (item.SMT_Date != null)
-                            {
-                                @:@item.SMT_Date
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.ITT_Remark))
-                            {
-                                @:@item.ITT_Remark
-                            }
-                            else if (!string.IsNullOrEmpty(item.SMT_Remark))
-                            {
-                                @:@item.SMT_Remark
-                            }
-                        </td>
-                        <td>
-                            @if (item.ITT_Status != null)
-                            {
-                                if (item.ITT_Status == 1)
-                                {
-                                    <i class="fas fa-check-square" style="color: dodgerblue"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times" style="color: red"></i>
-                                }
-                            }
-                            else if (item.SMT_Status != null)
-                            {
-                                if (item.SMT_Status == 1)
-                                {
-                                    <i class="fas fa-check-square" style="color: dodgerblue"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times" style="color: red"></i>
-                                }
-                            }
-                        </td>
-
-                        @if (item.Item != null)
+                    </td>
+                    <td>
+                        @if (item.ITT_Date != null)
                         {
-                            if (string.IsNullOrEmpty(item.FST))
+                            @:@item.ITT_Date
+                        }
+                        else if (item.SMT_Date != null)
+                        {
+                            @:@item.SMT_Date
+                        }
+                    </td>
+                    <td>
+                        @if (!string.IsNullOrEmpty(item.ITT_Remark))
+                        {
+                            @:@item.ITT_Remark
+                        }
+                        else if (!string.IsNullOrEmpty(item.SMT_Remark))
+                        {
+                            @:@item.SMT_Remark
+                        }
+                    </td>
+                    <td>
+                        @if (item.ITT_Status != null)
+                        {
+                            if (item.ITT_Status == 1)
                             {
-                                <td>
-                                    <a class="btn btn-primary btn-standard btn-admin-approve-LE approve" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
-                                    <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
-                                </td>
-                                <td><input class="remark col-12 remark-1" type="text" placeholder="Ghi chú..." /></td>
+                                <i class="fas fa-check-square" style="color: dodgerblue"></i>
                             }
                             else
                             {
-                                if (item.FST_Status == null)
-                                {
-                                    <td><i class="fas fa-times" style="color: red"></i></td>
-                                }
-                                else
-                                {
-                                    <td><i class="fas fa-check-square" style="color: dodgerblue"></i></td>
-                                }
-                                <td>@item.FST_Remark</td>
+                                <i class="fas fa-times" style="color: red"></i>
                             }
                         }
-                    </tr>
+                        else if (item.SMT_Status != null)
+                        {
+                            if (item.SMT_Status == 1)
+                            {
+                                <i class="fas fa-check-square" style="color: dodgerblue"></i>
+                            }
+                            else
+                            {
+                                <i class="fas fa-times" style="color: red"></i>
+                            }
+                        }
+                    </td>
+
+                    @if (item.Item != null)
+                    {
+                        if (string.IsNullOrEmpty(item.FST))
+                        {
+                            <td>
+                                <a class="btn btn-primary btn-standard btn-admin-approve-LE approve" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
+                                <a class="btn btn-danger btn-standard btn-admin-reject-LE unapprove" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
+                            </td>
+                            <td>@item.FST</td>
+                            <td>@item.FST_Date</td>
+                            <td><input class="remark col-12" type="text" placeholder="Ghi chú..." /></td>
+                        }
+                        else
+                        {
+                            if (item.FST_Status == null)
+                            {
+                                <td><i class="fas fa-times" style="color: red"></i></td>
+                                <td>@item.FST</td>
+                                <td>@item.FST_Date</td>
+                            }
+                            else
+                            {
+                                <td><i class="fas fa-check-square" style="color: dodgerblue"></i></td>
+                                <td>@item.FST</td>
+                                <td>@item.FST_Date</td>
+                            }
+                            <td>@item.FST_Remark</td>
+                        }
+                    }
+                </tr>
                 }
             </tbody>
         </table>
@@ -357,7 +363,7 @@
                         url: "/Guest/FSTApprove",
                         method: "POST",
                         data: {
-                            id: $('#ID').val(),
+                            id: $('#txtID').val(),
                             itemId: $(self).closest("tr").find(".itemID").val(),
                             remark: $(self).closest("tr").find(".remark").val(),
                             status: 1
@@ -385,7 +391,7 @@
                         url: "/Guest/FSTApprove",
                         method: "POST",
                         data: {
-                            id: $('#ID').val(),
+                            id: $('#txtID').val(),
                             itemId: $(self).closest("tr").find(".itemID").val(),
                             remark: $(self).closest("tr").find(".remark").val(),
                             status: 0
