--- a/SMS.Web/Views/LeaveEarly/Approve.cshtml
+++ b/SMS.Web/Views/LeaveEarly/Approve.cshtml
@@ -23,7 +23,7 @@
     <!--Div chứa table dữ liệu-->
     <div style="width:100%">
         <div class="card-header">
-            <h5 class="m-0 font-weight-bold text-primary">PHÊ DUYỆT CNV VỀ SỚM</h5>
+            <h5 class="m-0 font-weight-bold text-primary"><a href="/LeaveEarly/Approve">PHÊ DUYỆT CNV VỀ SỚM</a></h5>
         </div>
         <div class="row dataTables_wrapper dt-bootstrap4 above-table">
             <div class="col-2 input-group input-group-sm">
@@ -60,37 +60,6 @@
             </div>
             <div class="col-2">
                 <button class="btn btn-sm btn-primary" id="btn-search" onclick="handleSearch()" type="button"><i class="fas fa-search"></i> Tìm kiếm</button>
-            </div>
-        </div>
-
-        <div style="margin-top: 8px">
-            <div class="button-container" style="float: left">
-                <a class="btn btn-sm btn-success btn-reload"><i class="fas fa-sync"></i> Tải lại</a>
-            </div>
-            <div style="float: right">
-                <form class="radio-container">
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox" checked>Tất cả
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Chưa phê duyệt
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Đã phê duyệt
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Phê duyệt thay
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Hủy bỏ
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Bảo vệ đã xác nhận
-                    </label>
-                    <label class="checkbox-inline radio-button">
-                        <input class="radio" type="checkbox">Bảo vệ chưa xác nhận
-                    </label>
-                </form>
             </div>
         </div>
     </div>
@@ -140,7 +109,7 @@
             {
                 <tr>
                     <td>
-                        <span>REL</span>@Html.DisplayFor(modelItem => item.ID)@Html.DisplayFor(modelItem => item.Team)
+                        @Html.DisplayFor(modelItem => item.Team)@Html.DisplayFor(modelItem => item.ID)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.EmpCode)
