--- a/SMS.Web/Views/LeaveEarly/Edit.cshtml
+++ b/SMS.Web/Views/LeaveEarly/Edit.cshtml
@@ -37,9 +37,9 @@
             </div>
         </div>
     </div>
-
     <div class="form-main">
         @Html.AntiForgeryToken()
+        <div style="height: 5px"></div>
         <div class="validation-top alert-danger">
             @Html.ValidationSummary(true, "", new { @style = "color: red; list-style-type: none" })
         </div>
@@ -51,7 +51,7 @@
                     <div class="form-group row-1 input-group">
                         <label class="control-label col-md-2 lb">Mã CNV <span class="red">(*)</span></label>
                         <div class="col-md-3 input-group input-group-sm">
-                            @Html.EditorFor(model => model.EmpCode, new { htmlAttributes = new { maxlength = "8", @id = "txtEmpCodeLE", @class = "form-control input-previous-button" } })
+                            @Html.EditorFor(model => model.EmpCode, new { htmlAttributes = new { maxlength = "8", @id = "txtEmpCodeLE", @class = "form-control input-previous-button", @readonly = "readonly" } })
                         </div>
                         @Html.ValidationMessageFor(model => model.EmpCode, "", new { @class = "text-danger" })
                     </div>
@@ -83,27 +83,21 @@
                     <div class="form-group input-group">
                         <label class="control-label col-md-2 top-space">Lý do <span class="red">(*)</span></label>
                         <div class="col-md-10 input-group-sm">
-                            @Html.TextAreaFor(model => model.Reason, htmlAttributes: new { maxlength = "500", @class = "form-control col-md-12" })
+                            @Html.TextAreaFor(model => model.Reason, htmlAttributes: new { @class = "form-control col-md-12" })
                             @Html.ValidationMessageFor(model => model.Reason, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    @*<div class="form-group input-group">
-                        <label class="control-label col-md-2 top-space">Ngày đăng ký <span class="red">(*)</span></label>
-                        <div class="col-md-3 input-group-sm">
-                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @disable = "disable", @class = "form-control input-previous-button", @id = "estimated_date" } })
-                            @Html.ValidationMessageFor(model => model.EstimatedDate, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
                     <div class="form-group input-group specific-date-pick">
                         <label class="col-2 top-space" for="EstimatedDate">Ngày đăng ký <span class="red">(*)</span></label>
                         <div class="col-3 input-group-sm">
-                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @readonly = "readonly", @class = "form-control input-previous-button", @id = "estimated_date" } })
+                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @id = "estimated_date", @class = "form-control input-previous-button", @readonly = "readonly", @style = "background-color: white" } })
                         </div>
                         <label class="top-space" for="EstimatedTime">Giờ đăng ký <span class="red">(*)</span></label>
                         <div class="col-2 input-group-sm">
-                            @Html.EditorFor(model => model.EstimatedTime, new { htmlAttributes = new { @id = "estimated_time", @class = "form-control input-previous-button", @readonly = "readonly" } })
+                            @Html.EditorFor(model => model.EstimatedTime, new { htmlAttributes = new { @id = "estimated_time", @class = "form-control input-previous-button", @type = "time" } })
                         </div>
+                        @Html.ValidationMessageFor(model => model.EstimatedDate, "", new { @class = "text-danger" })
                         @Html.ValidationMessageFor(model => model.EstimatedTime, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group input-group input-group-sm" style="display:flex">
@@ -215,14 +209,14 @@
             dateFormat: 'dd/mm/yy'
         });
 
-        $('.timepicker, #estimated_time').timepicker({
-            timeFormat: 'h:mm p',
-            interval: 5,
-            startTime: '00:00',
-            dynamic: false,
-            dropdown: true,
-            scrollbar: true
-        });
+        //$('.timepicker, #estimated_time').timepicker({
+        //    timeFormat: 'h:mm p',
+        //    interval: 5,
+        //    startTime: '00:00',
+        //    dynamic: false,
+        //    dropdown: true,
+        //    scrollbar: true
+        //});
 
         $("#LE").removeClass('collapse');
         $("#LE").removeClass('collapsed');
